--- a/Production/BoidFromGround/package.json
+++ b/Production/BoidFromGround/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "cannon-es": "^0.15.1",
     "clean-webpack-plugin": "^3.0.0",
+    "math-ds": "^1.2.1",
+    "sparse-octree": "^6.1.0",
     "webpack": "^4.31.0",
     "webpack-merge": "^5.2.0"
   }
