--- a/Website/WebClient/package.json
+++ b/Website/WebClient/package.json
@@ -10,7 +10,9 @@
     "react-device-detect": "^1.11.14",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "three": "^0.122.0",
+    "three-orbit-controls": "^82.1.0"
   },
   "scripts": {
     "start": "react-scripts start --no-cache",
