--- a/Website/WebClient/package.json
+++ b/Website/WebClient/package.json
@@ -7,6 +7,7 @@
     "gh-pages": "^2.1.1",
     "radium": "^0.26.0",
     "react": "^16.13.1",
+    "react-animations": "^1.0.0",
     "react-device-detect": "^1.11.14",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
