--- a/Website/WebClient/package.json
+++ b/Website/WebClient/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "stats.js": "^0.17.0",
     "three": "^0.122.0",
     "three-orbit-controls": "^82.1.0"
   },
