--- a/Website/WebClient/package.json
+++ b/Website/WebClient/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://liarbirds.art",
   "dependencies": {
     "gh-pages": "^2.1.1",
+    "math-ds": "^1.2.1",
     "radium": "^0.26.0",
     "react": "^16.13.1",
     "react-animations": "^1.0.0",
@@ -12,6 +13,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "sparse-octree": "^6.1.0",
     "stats.js": "^0.17.0",
     "three": "^0.122.0",
     "three-orbit-controls": "^82.1.0"
